# spin_lake_project

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.bat  plot_binder.py  plot_chi.py  plot_ms2.py  plot_qaqmc_convergence.py  profile_run.py  requirements.txt  run_ruby.py  rydberg_compare.py  rydberg_ed.py  rydberg_qaqmc.py  rydberg_sse_ed.py  singularity.def  test.py  test_cpp_vs_python.py
csrc/: bindings.cpp  qaqmc_core.cpp  qaqmc_core.hpp
old_code/: rydberg_ed.py  rydberg_qaqmc.py  rydberg_sse.py
src/: ed_core.py  hamiltonian.py  lattices.py  measurement.py  postprocess.py  qaqmc.py  qaqmc_mpi.py  qaqmc_updates.py  qmc_updates.py  sse.py  sse_updates.py
